--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular4-auth",
+  "name": "flask-microservices-angular",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 9000 --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "pushstate-server": "^3.0.1",
     "rxjs": "^5.4.2",
+    "typings": "^2.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
